<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.havefn.civix.StartingActivity"
    android:background="#5c1493"
    android:focusable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:layout_marginTop="123dp"
        android:textSize="100dp"
        android:fontFamily="@android:string/unknownName"
        android:textColor="#e8fcf9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        android:id="@+id/starting_sign_up"
        android:layout_above="@+id/starting_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:background="#570a91"
        android:textColor="#f9f1ebeb" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:id="@+id/starting_login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp"
        android:textSize="25dp"
        android:background="#eee8e8"
        android:textColor="#5c1493" />
</RelativeLayout>
