<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/emailField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:layout_alignBottom="@+id/passwordField"
        android:layout_marginBottom="50dp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_alignStart="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:layout_marginBottom="110dp"
        android:textSize="25dp"
        android:background="#ffffff"
        android:textColor="#5c1493"  />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/passwordField"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton" />

</RelativeLayout>